# minion-cli

./: .gitignore  Cargo.toml  MINION_HUB.md  README.md  VISION.md  install-minion-hub.sh
.github/workflows/: release-minion-hub.yml
src/: main.rs
src/commands/: control.rs  deploy.rs  init.rs  mod.rs  setup.rs
src/resources/: docker-compose.app.yml  docker-compose.traefik.yml  docker-compose.yml  traefik.yml
src/utils/: app_config.rs  command.rs  config.rs  mod.rs  remote.rs  ssh.rs  test_support.rs
tests/: cli_smoke.rs  minion_hub_docker.rs
