[package]
name = "minion-cli"
version = "0.0.1"
edition = "2021"
description = "A CLI tool to streamline application deployments to remote VPS servers"
authors = ["Kevin Dewald <kevin@californiaopensource.com"]
license = "MIT"
repository = "https://github.com/CaliforniaOpenSource/minion-cli"
keywords = ["cli", "deployment", "vps", "devops", "automation"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "minion"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
ssh2 = "0.9.4"
