[package]
name = "minion-cli"
version = "0.0.6"
edition = "2021"
description = "A CLI tool to streamline application deployments to remote VPS servers"
authors = ["Kevin Dewald <kevin@californiaopensource.com"]
license = "MIT"
repository = "https://github.com/CaliforniaOpenSource/minion-cli"
keywords = ["cli", "deployment", "vps", "devops", "automation"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "minion"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
ssh2 = "0.9.5"
tempfile = "3.23.0"

[dev-dependencies]
testcontainers = { version = "0.25.2", features = ["blocking"] }
